# spike-lab

./: .gitignore  README.md  package.json  tsconfig.json
jules/: IMPROVEMENTS.md  LESSONS_LEARNED.md  README.md
lib/: cli.ts  client.ts  errors.ts  index.ts  jules-tasks.ts  project-profiler.ts  (+3 more)
spikes/agentic-orchestrator/project/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
spikes/agentic-orchestrator/project/agentic-orchestrator/: .gitignore  clippy.toml
spikes/agentic-orchestrator/project/agentic-orchestrator/crates/agent/: Cargo.toml
spikes/agentic-orchestrator/project/agentic-orchestrator/crates/agent/src/: exec_runner.rs  main.rs
spikes/agentic-orchestrator/project/agentic-orchestrator/crates/core/: Cargo.toml
spikes/agentic-orchestrator/project/agentic-orchestrator/crates/core/src/: model.rs  validation.rs
spikes/agentic-orchestrator/project/agentic-orchestrator/crates/core/tests/: validation.rs
spikes/agentic-orchestrator/project/agentic-orchestrator/crates/daemon/: Cargo.toml
spikes/agentic-orchestrator/project/agentic-orchestrator/crates/daemon/src/: db.rs  http.rs  main.rs  service.rs
spikes/agentic-orchestrator/project/agentic-orchestrator/docs/: API.md  ARCHITECTURE.md  DECISIONS.md  DEPENDENCIES.md  PRINCIPLES.md  REJECTED.md  ROADMAP.md  SCENARIOS.md  SCHEMA.surql  SECURITY.md  SPEC.md  USE_CASES.md
spikes/agentic-orchestrator/project/crates/agent/src/: exec_runner.rs  main.rs  slurm_runner.rs
spikes/agentic-orchestrator/project/crates/core/src/: api.rs  lib.rs  model.rs  util.rs
spikes/agentic-orchestrator/project/crates/core/tests/: core_tests.rs  validation.rs
spikes/agentic-orchestrator/project/crates/daemon/src/: main.rs  service.rs  vcs_jj.rs
spikes/agentic-orchestrator/project/crates/orchestrator-agent/: Cargo.toml
spikes/agentic-orchestrator/project/crates/orchestrator-agent/src/: executor.rs  main.rs  slurm.rs  vcs.rs
spikes/agentic-orchestrator/project/crates/orchestrator-core/: Cargo.toml
spikes/agentic-orchestrator/project/crates/orchestrator-core/src/: hashing.rs  lib.rs  model.rs  safety.rs  time.rs  validate.rs
spikes/agentic-orchestrator/project/crates/orchestrator-daemon/: Cargo.toml  schema.surql
spikes/agentic-orchestrator/project/crates/orchestrator-daemon/src/: api.rs  config.rs  db.rs  gc.rs  gdrive.rs  lib.rs  main.rs  scheduler.rs  schema.rs  state.rs  vcs.rs
spikes/agentic-orchestrator/project/crates/orchestratorctl/: Cargo.toml
spikes/agentic-orchestrator/project/crates/orchestratorctl/src/: main.rs
spikes/agentic-orchestrator/project/docs/: API.md  ARCHITECTURE.md  DECISIONS.md  DEPENDENCIES.md  GOOGLE_DRIVE_ARTIFACTS.md  JJ.md  NEXT_STEPS.md  REJECTED.md  ROADMAP.md  SCENARIOS.md  SECURITY.md  SLURM.md  SPEC.md  SPECS.md  schema.md
spikes/agentic-orchestrator/project/docs/examples/: enqueue_run.json  enqueue_run_gate.json  enqueue_run_gate_retry.json  enqueue_run_retry.json
spikes/spl/project/: .gitignore  Cargo.toml  README.md  justfile
spikes/spl/project/crates/spl-artifacts/: Cargo.toml
spikes/spl/project/crates/spl-artifacts/src/: lib.rs  manifest.rs  store.rs
spikes/spl/project/crates/spl-cli/: Cargo.toml
spikes/spl/project/crates/spl-cli/src/: main.rs
spikes/spl/project/crates/spl-core/: Cargo.toml
spikes/spl/project/crates/spl-core/src/: backoff.rs  commands.rs  engine.rs  ids.rs  lib.rs  model.rs  outcomes.rs  snapshot.rs  types.rs
spikes/spl/project/crates/spl-core/tests/: core_tests.rs
spikes/spl/project/crates/spl-hitl/: Cargo.toml
spikes/spl/project/crates/spl-hitl/src/: lib.rs
spikes/spl/project/crates/spl-index/: Cargo.toml
spikes/spl/project/crates/spl-index/src/: index.rs
spikes/spl/project/crates/spl-queue/: Cargo.toml
spikes/spl/project/crates/spl-queue/src/: lib.rs
spikes/spl/project/crates/spl-runner/: Cargo.toml
spikes/spl/project/crates/spl-runner/src/: config.rs  doctor.rs  lib.rs  runner.rs  scenario.rs  util.rs
spikes/spl/project/crates/spl-spec/: Cargo.toml
spikes/spl/project/crates/spl-spec/src/: lib.rs  pack.rs  profile.rs
spikes/spl/project/crates/spl-storage/: Cargo.toml
spikes/spl/project/crates/spl-storage-sqlite/: Cargo.toml
spikes/spl/project/crates/spl-storage-sqlite/migrations/: 0001_init.sql
spikes/spl/project/crates/spl-storage-sqlite/src/: storage.rs
spikes/spl/project/crates/spl-storage/src/: lib.rs  memory.rs  traits.rs
spikes/spl/project/crates/spl-validate/: Cargo.toml
spikes/spl/project/crates/spl-validate/src/: lib.rs  rule.rs  types.rs
spikes/spl/project/crates/spl-vcs/: Cargo.toml
spikes/spl/project/crates/spl-vcs-git/: Cargo.toml
spikes/spl/project/crates/spl-vcs-git/src/: git.rs
spikes/spl/project/crates/spl-vcs-jj/: Cargo.toml
spikes/spl/project/crates/spl-vcs-jj/src/: jj.rs  lib.rs
spikes/spl/project/crates/spl-vcs/src/: contract.rs  lib.rs  types.rs
spikes/spl/project/docs/: ANCHORS.md  ARCHITECTURE.md  CONFIG.md  OVERVIEW.md  PRD.md  SCENARIOS.md  SPECS.md  TEST_PLAN.md  USE_CASES.md  VCS_ADAPTERS.md
spikes/spl/project/examples/spec-packs/: README.md  docs-api-reference.yaml  feature-add-user-auth.yaml  hotfix-null-pointer.yaml  integration-external-api.yaml  refactor-extract-service.yaml
spikes/spl/project/fixtures/repos/repo_simple/: README.md
spikes/spl/project/fixtures/scenarios/SC-01-happy-path/: expected.yaml  spec_pack.yaml
spikes/spl/project/fixtures/scenarios/SC-01-happy-path/gates/: pre_smoke.txt
spikes/spl/project/fixtures/scenarios/SC-03-pre-smoke-fail/: expected.yaml  spec_pack.yaml
spikes/spl/project/fixtures/scenarios/SC-03-pre-smoke-fail/gates/: pre_smoke.txt  validate.json
spikes/spl/project/fixtures/scenarios/SC-05-audit-violation/: expected.yaml  spec_pack.yaml
spikes/spl/project/fixtures/scenarios/SC-05-audit-violation/gates/: audit.json
spikes/spl/project/fixtures/scenarios/SC-09-landing-conflict/: delegate.patch  expected.yaml  spec_pack.yaml
spikes/spl/project/fixtures/scenarios/SC-09-landing-conflict/gates/: land.json  post_smoke.txt
spikes/spl/project/fixtures/scenarios/SC-11-crash-recovery/: expected.yaml  spec_pack.yaml
(+10 files in other folders)
