[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/daemon",
  "crates/agent",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.80.1"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["json"] }
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "process", "io-util"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Embedded SurrealDB (SurrealKV engine)
surrealdb = { version = "2.4.0", default-features = false, features = ["kv-surrealkv"] }
