[workspace]
resolver = "2"
members = [
  "crates/spl-core",
  "crates/spl-spec",
  "crates/spl-validate",
  "crates/spl-storage",
  "crates/spl-storage-sqlite",
  "crates/spl-artifacts",
  "crates/spl-queue",
  "crates/spl-hitl",
  "crates/spl-vcs",
  "crates/spl-vcs-git",
  "crates/spl-vcs-jj",
  "crates/spl-index",
  "crates/spl-runner",
  "crates/spl-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.8", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
shellexpand = "3.1"
