[package]
name = "orchestrator-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
ulid = "1.2.1"
