[package]
name = "orchestrator-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-core = { path = "../orchestrator-core" }

anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
walkdir = "2.5.0"

surrealdb = { version = "2.4.0", default-features = false, features = ["kv-surrealkv"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
