[package]
name = "spl-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shellexpand.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
spl-core = { path = "../spl-core" }
spl-storage = { path = "../spl-storage" }
spl-storage-sqlite = { path = "../spl-storage-sqlite" }
spl-artifacts = { path = "../spl-artifacts" }
spl-vcs = { path = "../spl-vcs" }
spl-vcs-git = { path = "../spl-vcs-git" }
spl-vcs-jj = { path = "../spl-vcs-jj" }
spl-spec = { path = "../spl-spec" }
spl-queue = { path = "../spl-queue" }
spl-hitl = { path = "../spl-hitl" }

[dev-dependencies]
tempfile.workspace = true
