[package]
name = "spl-storage-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
spl-core = { path = "../spl-core" }
spl-storage = { path = "../spl-storage" }

[dev-dependencies]
tempfile.workspace = true
