[package]
name = "orchestrator-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
